Базовая поработка header

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="/fonts/fonts.css">
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/style.css">
-  </head>
-  <body></body>
+</head>
+<body>
+<header>
+    <nav class="navigation_container">
+        <ul class="navigation_list">
+            <li class="navigation_element"><a style="text-decoration: none" href="#">главная</a></li>
+            <li class="navigation_element"><a href="#">посмотреть лоты</a></li>
+            <li class="navigation_element"><a href="#">об аукционе</a></li>
+        </ul>
+    </nav>
+    <div class="el-2">ПРИВЕТ</div>
+    <div class="el-3">ПРИВЕТ ПРИВЕТ</div>
+</header>
+<main>
+    <section class="cover"></section>
+    <section class="lots"></section>
+    <section class="about"></section>
+</main>
+<footer>
+
+</footer>
+</body>
 </html>
