Исправил размер шапки

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
 <header>
-    <nav class="navigation_container">
-        <ul class="navigation_list">
-            <li class="navigation_element"><a style="text-decoration: none" href="#">главная</a></li>
-            <li class="navigation_element"><a href="#">посмотреть лоты</a></li>
-            <li class="navigation_element"><a href="#">об аукционе</a></li>
-        </ul>
-    </nav>
-    <div class="el-2">ПРИВЕТ</div>
-    <div class="el-3">ПРИВЕТ ПРИВЕТ</div>
+    <div class="header_container">
+        <nav class="navigation_container">
+            <ul class="navigation_list">
+                <li class="navigation_element"><a style="text-decoration: none" href="#">главная</a></li>
+                <li class="navigation_element"><a href="#">посмотреть лоты</a></li>
+                <li class="navigation_element"><a href="#">об аукционе</a></li>
+            </ul>
+        </nav>
+        <div class="el-2">ПРИВЕТ</div>
+        <div class="el-3">ПРИВЕТ ПРИВЕТ</div>
+    </div>
 </header>
 <main>
     <section class="cover"></section>
