--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
     <div class="header_container">
         <nav class="navigation_container">
             <ul class="navigation_list">
-                <li class="navigation_element"><a style="text-decoration: none" href="#">главная</a></li>
+                <li class="navigation_element navigation_element_active "><a style="text-decoration: none" href="#">главная</a></li>
                 <li class="navigation_element"><a href="#">посмотреть лоты</a></li>
                 <li class="navigation_element"><a href="#">об аукционе</a></li>
             </ul>
         </nav>
-        <div class="el-2">ПРИВЕТ</div>
-        <div class="el-3">ПРИВЕТ ПРИВЕТ</div>
+        <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="/images/logo-black.svg"></a></div>
+        <div class="header_address">
+            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a><br>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                наб. Принсенграхт 263-265, Амстердам
+            </address>
+        </div>
     </div>
 </header>
 <main>
-    <section class="cover"></section>
+    <section class="cover">
+
+    </section>
     <section class="lots"></section>
     <section class="about"></section>
 </main>
