--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 <header>
     <div class="header_container">
         <nav class="navigation_container">
             <ul class="navigation_list">
-                <li class="navigation_element navigation_element_active "><a style="text-decoration: none" href="#">главная</a></li>
-                <li class="navigation_element"><a href="#">посмотреть лоты</a></li>
-                <li class="navigation_element"><a href="#">об аукционе</a></li>
+                <li class="navigation_element navigation_element_active "><a
+                        class="navigation_link navigation_link__active" href="#">главная</a></li>
+                <li class="navigation_element"><a class="navigation_link" href="#">посмотреть лоты</a></li>
+                <li class="navigation_element"><a class="navigation_link" href="#">об аукционе</a></li>
             </ul>
         </nav>
-        <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="/images/logo-black.svg"></a></div>
+        <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="./images/logo-black.svg"></a></div>
         <div class="header_address">
             <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a><br>
-                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
                 наб. Принсенграхт 263-265, Амстердам
             </address>
         </div>
@@ -30,9 +31,21 @@
 </header>
 <main>
     <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+            <span class="title_element title_element1">ОН<span class="title_element1__mod">О</span></span>
+            <span class="title_element title_element2">ТЕБ<span class="title_element2__mod">Е</span></span>
+            <span class="title_element title_element3">НАДО</span>
+        </h1>
+        <div class="cover_description">
+            <p class="cover_description__text">Аукцион вещей, в которые никто не верил</p>
+            <button class="betting-button" type="button">Сделать ставку</button>
+        </div>
+    </section>
+    <section class="lots">
+
 
     </section>
-    <section class="lots"></section>
     <section class="about"></section>
 </main>
 <footer>
