--- a/index.html
+++ b/index.html
@@ -42,10 +42,24 @@
             <button class="betting-button" type="button">Сделать ставку</button>
         </div>
     </section>
-
     <section class="lots">
-
-
+        <div class="lots_container">
+            <div class="lots_description">лоты</div>
+            <div class="lots_cards_container">
+                <ul class="lots_list">
+                    <li><a class="container_link" href="#">
+                        <article class="container_lot">
+                            <p class="card_title">Фильм режиссёра, который бросил киношколу</p>
+                            <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                        </article>
+                    </a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="lots_link">посмотреть больше</div>
+        </div>
     </section>
     <section class="about"></section>
 </main>
