--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </section>
     <section class="lots">
         <div class="lots_container">
-            <div class="lots_description">лоты</div>
+            <div class="lots_description">ЛОТЫ</div>
             <div class="lots_cards_container">
                 <ul class="lots_list">
                     <li><a class="container_link" href="#">
                         <article class="container_lot">
-                            <p class="card_title">Фильм режиссёра, который бросил киношколу</p>
+                            <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
                             <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                                 ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                         </article>
