Сделал все карточки

--- a/index.html
+++ b/index.html
@@ -47,13 +47,28 @@
             <div class="lots_description">ЛОТЫ</div>
             <div class="lots_cards_container">
                 <ul class="lots_list">
-                    <li><a class="container_link" href="#">
-                        <article class="container_lot">
-                            <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
-                            <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                        </article>
-                    </a></li>
+                    <li class="lot_list_item">
+                        <a class="container_link" href="#">
+                            <article class="container_lot">
+                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
+                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                            </article>
+                        </a></li> <li class="lot_list_item">
+                        <a class="container_link" href="#">
+                            <article class="container_lot">
+                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
+                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                            </article>
+                        </a></li> <li class="lot_list_item">
+                        <a class="container_link" href="#">
+                            <article class="container_lot">
+                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
+                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                            </article>
+                        </a></li>
                     <li></li>
                     <li></li>
                 </ul>
