--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
         <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="./images/logo-black.svg"></a></div>
         <div class="header_address">
-            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a><br>
-                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 наб. Принсенграхт 263-265, Амстердам
             </address>
         </div>
@@ -50,7 +50,7 @@
                     <li class="lot_list_item">
                         <a class="container_link" href="#">
                             <article class="container_lot">
-                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
+                                <h2 class="card_title">ФИЛЬМ РЕЖИСЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h2>
                                 <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                                     ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                             </article>
