--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header_address">
             <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-                наб. Принсенграхт 263-265, Амстердам
+                <p>наб. Принсенграхт 263-265, Амстердам</p>
             </address>
         </div>
     </div>
@@ -54,32 +54,112 @@
                                 <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                                     ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                             </article>
-                        </a></li> <li class="lot_list_item">
+                        </a></li>
+                    <li class="lot_list_item lot_list_item2">
                         <a class="container_link" href="#">
-                            <article class="container_lot">
-                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
-                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                            </article>
-                        </a></li> <li class="lot_list_item">
-                        <a class="container_link" href="#">
-                            <article class="container_lot">
-                                <h2 class="card_title">ФИЛЬМ РЕЖИСЕРА КОТОРЫЙ БРОСИЛ ШКОЛУ</h2>
-                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                            <article class="container_lot container_lot2">
+                                <h2 class="card_title">КНИГА, ГДЕ ОПИСАН ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО
+                                    АГЕНТА</h2>
+                                <p class="card_description">Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                                    и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904
+                                    года и об истории литературы, начиная с античных времён. И это всё накладывается на
+                                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
                             </article>
                         </a></li>
-                    <li></li>
-                    <li></li>
+                    <li class="lot_list_item lot_list_item3">
+                        <a class="container_link" href="#">
+                            <article class="container_lot container_lot3">
+                                <h2 class="card_title card_title3">КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ
+                                    ПОДРУГИ</h2>
+                                <p class="card_description card_description">Ну действительно, там линия, тут кружочек,
+                                    а здесь и вовсе
+                                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы
+                                    на такое поставили, если бы не знали, что это — одна из революционных работ
+                                    Кандинского?</p>
+                            </article>
+                        </a></li>
+
                 </ul>
             </div>
             <div class="lots_link">посмотреть больше</div>
         </div>
     </section>
-    <section class="about"></section>
-</main>
-<footer>
+    <section class="about">
+        <div class="about__column">
+            <div class="about__logo">
+                <img
+                        src="./images/logo-white.svg"
+                        alt="белый логотип сайта Оно тебе надо"
+                        class="about__logo-image"
+                >
+            </div>
+        </div>
+        <div class="about__column">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text-container">
+                <p class="about__text">
+                    Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
+                    не
+                    должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина,
+                    которую
+                    может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+                </p>
+                <p class="about__text">
+                    Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
+                    критиками.
+                    Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся
+                    простоту
+                    или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи
+                    не верил
+                    никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+                </p>
 
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer class="footer">
+    <div class="footer_container">
+        <div class="header_address footer_address">
+            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <p>наб. Принсенграхт 263-265, Амстердам</p>
+            </address>
+        </div>
+        <nav class=" navigation_container_footer">
+            <ul class="navigation_list_footer">
+                <li class="navigation_element navigation_element_active navigation_element_footer"><a
+                        class="navigation_link navigation_link__active" href="#">главная</a></li>
+                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">посмотреть лоты</a></li>
+                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">об аукционе</a></li>
+            </ul>
+        </nav>
+        <ul class="footer_social-list">
+            <li class="footer_social-list-item">
+                <a href="#" class="footer_social-link">
+                    <img src="./images/yt.svg"
+                         alt="Иконка Youtube"
+                         class="footer_social-icon"
+                    >
+                </a>
+            </li>
+            <li class="footer_social-list-item">
+                <a href="#" class="footer_social-link">
+                    <img src="./images/vk.svg"
+                         alt="иконка Вконтакте"
+                         class="footer_social-icon">
+                </a>
+            </li>
+            <li class="footer_social-list-item">
+                <a href="#" class="footer_social-link">
+                    <img src="./images/pinterest.svg"
+                         alt="иконка pinterest"
+                         class="footer_social-icon">
+                </a>
+            </li>
+        </ul>
+    </div>
 </footer>
 </body>
 </html>
