--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="./images/logo-black.svg"></a></div>
         <div class="header_address">
-            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a>
+            <address><a href="tel:+99995555555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 <p>наб. Принсенграхт 263-265, Амстердам</p>
             </address>
@@ -122,7 +122,7 @@
 <footer class="footer">
     <div class="footer_container">
         <div class="header_address footer_address">
-            <address><a href="tel:++9 999 555 5555">+9 999 555 5555</a>
+            <address><a href="tel:+99995555555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 <p>наб. Принсенграхт 263-265, Амстердам</p>
             </address>
