--- a/index.html
+++ b/index.html
@@ -5,31 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
 </head>
 <body>
-<header>
-    <div class="header_container">
+<header class="header header_container">
         <nav class="navigation_container">
             <ul class="navigation_list">
-                <li class="navigation_element navigation_element_active "><a
+                <li class="navigation_element navigation_element_active"><a
                         class="navigation_link navigation_link__active" href="#">главная</a></li>
                 <li class="navigation_element"><a class="navigation_link" href="#">посмотреть лоты</a></li>
                 <li class="navigation_element"><a class="navigation_link" href="#">об аукционе</a></li>
             </ul>
         </nav>
-        <div class="logo"><a href="#"><img alt="Логотип" class="logo_img" src="./images/logo-black.svg"></a></div>
-        <div class="header_address">
-            <address><a href="tel:+99995555555">+9 999 555 5555</a>
-                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-                <p>наб. Принсенграхт 263-265, Амстердам</p>
-            </address>
-        </div>
-    </div>
+        <a class="logo" href="#"><img alt="Логотип" class="logo_img" src="./images/logo-black.svg"/></a>
+        <address class="address header_address">
+            <a href="tel:+99995555555">+9 999 555 5555</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
 </header>
-<main>
+<main class="main">
     <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover_title">
@@ -42,56 +39,62 @@
             <button class="betting-button" type="button">Сделать ставку</button>
         </div>
     </section>
-    <section class="lots">
-        <div class="lots_container">
-            <div class="lots_description">ЛОТЫ</div>
-            <div class="lots_cards_container">
-                <ul class="lots_list">
-                    <li class="lot_list_item">
-                        <a class="container_link" href="#">
-                            <article class="container_lot">
-                                <h2 class="card_title">ФИЛЬМ РЕЖИСЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h2>
-                                <p class="card_description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                            </article>
-                        </a></li>
-                    <li class="lot_list_item lot_list_item2">
-                        <a class="container_link" href="#">
-                            <article class="container_lot container_lot2">
-                                <h2 class="card_title">КНИГА, ГДЕ ОПИСАН ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО
-                                    АГЕНТА</h2>
-                                <p class="card_description">Объёмом почти в тысячу страниц. Иногда без знаков препинания
-                                    и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904
-                                    года и об истории литературы, начиная с античных времён. И это всё накладывается на
-                                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-                            </article>
-                        </a></li>
-                    <li class="lot_list_item lot_list_item3">
-                        <a class="container_link" href="#">
-                            <article class="container_lot container_lot3">
-                                <h2 class="card_title card_title3">КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ
-                                    ПОДРУГИ</h2>
-                                <p class="card_description card_description">Ну действительно, там линия, тут кружочек,
-                                    а здесь и вовсе
-                                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы
-                                    на такое поставили, если бы не знали, что это — одна из революционных работ
-                                    Кандинского?</p>
-                            </article>
-                        </a></li>
-
-                </ul>
-            </div>
-            <div class="lots_link">посмотреть больше</div>
-        </div>
+    <section class="lots" id="lots">
+        <h2 class="lots_heading">лоты</h2>
+        <ul class="lots_card-list">
+            <li class="lots_card-list-item">
+                <a href="#" class="card-link">
+                    <article class="card first_card-image">
+                        <h3 class="card_title">
+                            Фильм режиссёра, который бросил киношколу
+                        </h3>
+                        <p class="card_text">
+                            Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                            ставка, если бы вы не знали, что режиссёр — Пол Томас
+                            Андерсон?
+                        </p>
+                    </article>
+                </a>
+            </li>
+            <li class="lots_card-list-item">
+                <a href="#" class="card-link">
+                    <article class="card second_card-image">
+                        <h3 class="card_title">
+                            Книга, где описан один скучный день из жизни рекламного агента
+                        </h3>
+                        <p class="card_text">
+                            Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                            с переходами на древнеанглийский. В ней одновременно
+                            рассказывается о 16 июня 1904 года и об истории литературы,
+                            начиная с античных времён. И это всё накладывается на
+                            эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                            Джеймса Джойса?
+                        </p>
+                    </article>
+                </a>
+            </li>
+            <li class="lots_card-list-item">
+                <a href="#" class="card-link">
+                    <article class="card third_card-image">
+                        <h3 class="card_title">
+                            Картина, которую повторит даже 5-летний сын маминой подруги
+                        </h3>
+                        <p class="card_text">
+                            Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                            что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                            котиков… Сколько бы вы на такое поставили, если бы не знали,
+                            что это — одна из революционных работ Кандинского?
+                        </p>
+                    </article>
+                </a>
+            </li>
+        </ul>
+        <a href="#" class="lots_look-more-link">посмотреть больше</a>
     </section>
     <section class="about">
         <div class="about__column">
             <div class="about__logo">
-                <img
-                        src="./images/logo-white.svg"
-                        alt="белый логотип сайта Оно тебе надо"
-                        class="about__logo-image"
-                >
+                <img src="./images/logo-white.svg" alt="белый логотип сайта Оно тебе надо" class="about__logo-image"/>
             </div>
         </div>
         <div class="about__column">
@@ -99,21 +102,17 @@
             <div class="about__text-container">
                 <p class="about__text">
                     Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
-                    не
-                    должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина,
-                    которую
+                    не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
+                    картина, которую
                     может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
                 </p>
                 <p class="about__text">
                     Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
-                    критиками.
-                    Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся
-                    простоту
-                    или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи
-                    не верил
-                    никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+                    критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику,
+                    кажущуюся
+                    простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в
+                    эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
                 </p>
-
             </div>
         </div>
     </section>
@@ -121,41 +120,35 @@
 
 <footer class="footer">
     <div class="footer_container">
-        <div class="header_address footer_address">
-            <address><a href="tel:+99995555555">+9 999 555 5555</a>
+            <address class="header_address footer_address">
+                <a href="tel:+99995555555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 <p>наб. Принсенграхт 263-265, Амстердам</p>
             </address>
-        </div>
-        <nav class=" navigation_container_footer">
+        <nav class="navigation_container_footer">
             <ul class="navigation_list_footer">
                 <li class="navigation_element navigation_element_active navigation_element_footer"><a
                         class="navigation_link navigation_link__active" href="#">главная</a></li>
-                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">посмотреть лоты</a></li>
-                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">об аукционе</a></li>
+                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">посмотреть
+                    лоты</a></li>
+                <li class="navigation_element navigation_element_footer"><a class="navigation_link" href="#">об
+                    аукционе</a></li>
             </ul>
         </nav>
         <ul class="footer_social-list">
             <li class="footer_social-list-item">
                 <a href="#" class="footer_social-link">
-                    <img src="./images/yt.svg"
-                         alt="Иконка Youtube"
-                         class="footer_social-icon"
-                    >
+                    <img src="./images/yt.svg" alt="Иконка Youtube" class="footer_social-icon"/>
                 </a>
             </li>
             <li class="footer_social-list-item">
                 <a href="#" class="footer_social-link">
-                    <img src="./images/vk.svg"
-                         alt="иконка Вконтакте"
-                         class="footer_social-icon">
+                    <img src="./images/vk.svg" alt="иконка Вконтакте" class="footer_social-icon"/>
                 </a>
             </li>
             <li class="footer_social-list-item">
                 <a href="#" class="footer_social-link">
-                    <img src="./images/pinterest.svg"
-                         alt="иконка pinterest"
-                         class="footer_social-icon">
+                    <img src="./images/pinterest.svg" alt="иконка pinterest" class="footer_social-icon"/>
                 </a>
             </li>
         </ul>
