--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button class="betting-button" type="button">Сделать ставку</button>
         </div>
     </section>
-    <section class="lots" id="lots">
+    <section class="lots">
         <h2 class="lots_heading">лоты</h2>
         <ul class="lots_card-list">
             <li class="lots_card-list-item">
